# 2D-UI-Example-Project

./: CMakeLists.txt  NewDemoProject.qmlproject  NewDemoProject.qmlproject.qtds  README.md  main.qml  qmlmodules
content/: App.qml  MyMainViewRectangle.ui.qml  Screen01.ui.qml
imports/: CMakeLists.txt
imports/NewDemoProject/: CMakeLists.txt  Constants.qml  qmldir
imports/NewDemoProject/designer/: plugin.metainfo
src/: import_qml_plugins.h
